--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -17,7 +17,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name_title"
+        android:text="@string/app_name_title1"
+        android:textColor="@color/black"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name_title2"
         android:textColor="@color/black"
         android:gravity="center_horizontal"
         android:layout_marginBottom="60dp"
